ci: Update maven-central URL